--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
         <section class="boolean">
             <div class="container ">
                 <div class="row">
-                    <div class="col-6 d-flex ">
+                    <div class="col-12 col-md-6 d-flex ">
                         <div class="col fs-2">Boolean</div>
                     </div>
-                    <div class="col-6 d-flex align-items-center">
-                        <div class="col-8">studenti online negli ultimi 30 anni</div>
-                        <div class="col-4"> nuovo studente
+                    <div class="col-12 col-md-6 d-flex align-items-center">
+                        <div class="col-12 col-md-6">studenti online negli ultimi 30 anni</div>
+                        <div class="col-12 col-md-4"> nuovo studente
                             <i class="fa-regular fa-square-plus fs-1"></i>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 d-flex ">
+                    <div class="col-12 col-md-6 d-flex ">
                         <span class="badge rounded-pill bg-dark ">3 app</span>
                         <i class="fa-solid fa-angles-right" style="color: #ffffff;"></i>
                         <span class="badge rounded-pill bg-dark">3 app</span>
                         <span class="badge rounded-pill bg-dark">3 app</span>
                         <span class="badge rounded-pill bg-dark">3 app</span>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
                         <div class="fs-1">125</div>
                     </div>
                 </div>
