--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
                     <div class="col-auto d-flex align-items-center ">
-                        <i class="fa-solid fa-bell col" style="color: #d66000;"></i>
+                        <div class="dropdown">
+                            <button class=" dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa-solid fa-bell col" style="color: #d66000;"></i>
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#">profilo</a></li>
+                              <li><a class="dropdown-item" href="#">fatturazione</a></li>
+                              <li><a class="dropdown-item" href="#">lagout</a></li>
+                            </ul>
+                          </div>
                     </div>
                 </div>
             </div>
@@ -76,9 +85,8 @@
                     </div>
                     <div class="col-12 col-md-6 d-flex align-items-center">
                         <div class="col-12 col-md-6">studenti online negli ultimi 30 anni</div>
-                        <div class="col-12 col-md-4"> nuovo studente
-                            <i class="fa-regular fa-square-plus fs-1"></i>
-                        </div>
+                        <div class="col-12 col-md-4"> nuovo studente</div>
+                        
                     </div>
                 </div>
                 <div class="row">
@@ -215,19 +223,14 @@
                                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#collapse1" aria-expanded="true"
                                                 aria-controls="collapse1">
-                                                Elemento Accordion #1
+                                                come posso aggiungere un nuovo studente?
                                             </button>
                                         </h2>
-                                        <div id="collapse1" class="accordion-collapse collapse show"
+                                        <div id="collapse1" class="accordion-collapse collapse "
                                             data-bs-parent="#accordionExample1" role="region"
                                             aria-labelledby="heading1">
                                             <div class="accordion-body">
-                                                Vestibulum hendrerit ultrices nibh, sed pharetra lacus ultrices eget.
-                                                Morbi
-                                                et
-                                                ipsum et sapien dapibus facilisis. Integer eget semper nibh. Proin enim
-                                                nulla,
-                                                egestas ac rutrum eget, ullamcorper nec turpis.
+                                                come posso accedere alle informazioni dell mio account?
                                             </div>
                                         </div>
                                     </div>
@@ -236,19 +239,14 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapse2"
                                                 aria-expanded="false" aria-controls="collapse2">
-                                                Elemento Accordion #2
+                                                come posso aggiungere un nuovo studente?
                                             </button>
                                         </h2>
                                         <div id="collapse2" class="accordion-collapse collapse"
                                             data-bs-parent="#accordionExample1" role="region"
                                             aria-labelledby="heading2">
                                             <div class="accordion-body">
-                                                Vestibulum hendrerit ultrices nibh, sed pharetra lacus ultrices eget.
-                                                Morbi
-                                                et
-                                                ipsum et sapien dapibus facilisis. Integer eget semper nibh. Proin enim
-                                                nulla,
-                                                egestas ac rutrum eget, ullamcorper nec turpis.
+                                                come posso accedere alle informazioni dell mio account?
                                             </div>
                                         </div>
                                     </div>
@@ -257,19 +255,14 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapse3"
                                                 aria-expanded="false" aria-controls="collapse3">
-                                                Elemento Accordion #3
+                                                come posso aggiungere un nuovo studente?
                                             </button>
                                         </h2>
                                         <div id="collapse3" class="accordion-collapse collapse"
                                             data-bs-parent="#accordionExample1" role="region"
                                             aria-labelledby="heading3">
                                             <div class="accordion-body">
-                                                Vestibulum hendrerit ultrices nibh, sed pharetra lacus ultrices eget.
-                                                Morbi
-                                                et
-                                                ipsum et sapien dapibus facilisis. Integer eget semper nibh. Proin enim
-                                                nulla,
-                                                egestas ac rutrum eget, ullamcorper nec turpis.
+                                                come posso accedere alle informazioni dell mio account?
                                             </div>
                                         </div>
                                     </div>
@@ -323,6 +316,9 @@
             </div>
         </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
